Updating a profile path.

--- a/public/404.html
+++ b/public/404.html
@@ -44,7 +44,6 @@
       "@id": "http://localhost:1313/#website",
       "url": "http://localhost:1313/",
       "name": "LauraTech",
-      "description":  null ,
       "publisher": {
         "@id": "http://localhost:1313/#author"
       },
@@ -61,7 +60,6 @@
       "about": {
          "@id": "http://localhost:1313/#author"
       },
-      "description": ,
       "inLanguage": "en-us",
       "potentialAction": [
         {
@@ -117,7 +115,7 @@
   <div class="container">
     <div class="sidebar-about">
       <div class="author-image">
-            <img src="/images/laura.jpg" class="img-circle img-headshot center" alt="Profile Picture">
+            <img src="/lauratech/images/laura.jpg" class="img-circle img-headshot center" alt="Profile Picture">
         </div>
 
       <h1>LauraTech</h1>
