--- a/public/stuff/index.html
+++ b/public/stuff/index.html
@@ -151,7 +151,7 @@
         sizes="144x144"
         href="/apple-touch-icon-144-precomposed.png">
 
-  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="shortcut icon" href="/lauratech/favicon.png">
 
   
   </head>
