--- a/public/404.html
+++ b/public/404.html
@@ -132,6 +132,9 @@
         <li>
           <a href="/posts/">Posts</a>
         </li>
+        <li>
+          <a href="/stuff/">Stuff</a>
+        </li>
       </ul>
     </nav>
 
