--- a/public/stuff/index.html
+++ b/public/stuff/index.html
@@ -200,7 +200,7 @@ Press the button to ask the Generator to generate your acronym.">
 
   <div>
   <p>This is the stuff page.</p>
-<script language="Javascript" type="text/javascript" src ="/js/myscripts.js"></script>
+<script language="Javascript" type="text/javascript" src ="/lauratech/js/myscripts.js"></script>
 <br />
 <p>
 <h2>Press the button to ask the Generator to generate your acronym.</h2>
